feat: add the ability to export tasks
